# risico-2023

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build-with-docker.sh  build.sh  compile.md  configuration.yml  pyproject.toml  questions.md  release.sh
.github/: copilot-instructions.md
.github/workflows/: build-on-release.yml  build-with-musl.yml  build.yaml  create-release-on-tag.yml  linux-build-with-docker.__yml  tag_and_release.sh  update-crate-on-release.__yml  update-crate-on-release._yml  update-crate-on-release.yml
src/: __main.rs  _main.rs  bin2netcdf.rs  main.rs  risico-2023-config-converter.rs  risico-2023.rs
src/lib/: mod.rs  python.rs  version.rs
src/lib/models/: input.rs  output.rs
src/lib/modules/: functions.rs  mod.rs
src/lib/modules/angstrom/: constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/fosberg/: constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/fwi/: config.rs  constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/hdw/: functions.rs  models.rs  tests.rs
src/lib/modules/kbdi/: config.rs  constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/mark5/: config.rs  constants.rs  functions.rs  models.rs  tests.rs
src/lib/modules/nesterov/: constants.rs  functions.rs  models.rs  tests.rs
src/lib/modules/orieux/: constants.rs  functions.rs  models.rs  tests.rs
src/lib/modules/portuguese/: constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/risico/: config.rs  constants.rs  functions.rs  mod.rs  models.rs  tests.rs
src/lib/modules/sharples/: functions.rs  mod.rs  models.rs  tests.rs
