[package]
name = "risico-2023"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
gdal_bindgen = ["gdal/bindgen"]
gdal = ["dep:gdal"]
static_deps = ["netcdf-sys/static", "hdf5-sys/static"]

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.5.0"
itertools = "0.11.0"
chrono = "0.4"
serde = "1.0"
libflate = "2.0.0"
netcdf = "0.8.1"
netcdf-sys = { version = "0.5.1" }
rayon = "1.6.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
png = "0.17.7"
gdal = { version = "0.15.0", default-features = false, optional = true }
rstar = "0.11.0"
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1" }
