[package]
name = "risico-2023"
version = "0.3.0"
edition = "2021"
default-run = "risico-2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
gdal_bindgen = ["gdal/bindgen"]
gdal = ["dep:gdal"]
static_deps = ["netcdf-sys/static", "hdf5-sys/static"]

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive"] }


log = "0.4.17"
strum = "0.26.3"
strum_macros = "0.26.4"
pretty_env_logger = "0.5.0"
itertools = "0.13.0"
chrono = "0.4"
serde = "1.0"
libflate = "2.0.0"
rayon = "1.6.0"
ndarray = { version = "0.16.0", features = ["rayon"] }
ndarray-stats = "0.5.1"
png = "0.17.7"
rstar = "0.12.0"
# Native dependencies
gdal = { version = "0.17.0", default-features = false, optional = true }
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1" }
netcdf = "0.8.1"
netcdf-sys = { version = "0.5.1" }
serde_derive = "1.0.209"
serde_yaml = "0.9.17"
clap_derive = "4.5.13"


[build-dependencies]
built = "0.7.4"

[lib]
name = "risico"
path = "src/lib/mod.rs"

[[bin]]
name = "risico-2023"
path = "src/bin/main.rs"

[[bin]]
name = "risico-2023-config-converter"
path = "src/bin/converter.rs"
