[package]
name = "risico-2023"
description = "risico-2023 Wildfire Risk Assessment Model by CIMA Research Foundation"
tags = ["wildfire", "risk assessment model"]
license = "EUPL-1.2"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# build-binary must be enabled in order to build the binaries
build-binary = [
    "dep:log",
    "dep:clap",
    "dep:pretty_env_logger",
    "dep:libflate",
    "dep:png",
    "dep:rstar",
    "dep:serde_yaml",
    "dep:clap_derive",
    "dep:netcdf",
    "dep:netcdf-sys",
    "dep:hdf5",
    "dep:hdf5-sys",
]

gdal_bindgen = ["gdal/bindgen"]
gdal = ["dep:gdal"]
static_deps = ["netcdf-sys/static", "hdf5-sys/static"]

default = ["build-binary"]

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive"], optional = true }
clap_derive = { version = "4.5.13", optional = true }
log = { version = "0.4.17", optional = true }
strum = { version = "0.26.3", optional = false }
strum_macros = { version = "0.26.4", optional = false }
pretty_env_logger = { version = "0.5.0", optional = true }
itertools = { version = "0.13.0", optional = false }
chrono = { version = "0.4", optional = false }
serde = { version = "1.0", optional = false }
libflate = { version = "2.0.0", optional = true }
rayon = { version = "1.6.0", optional = false }
ndarray = { version = "0.16.0", features = ["rayon"], optional = false }
ndarray-stats = { version = "0.5.1", optional = false }
png = { version = "0.17.7", optional = true }
rstar = { version = "0.12.0", optional = true }
serde_derive = { version = "1.0.209", optional = false }
serde_yaml = { version = "0.9.17", optional = true }
cftime-rs = { git = "https://github.com/CIMAFoundation/cftime-rs-no-cdylib"}
chrono-tz = {version = "0.6"}
lazy_static = "1.4.0"

# Native dependencies
gdal = { version = "0.17.0", default-features = false, optional = true }
hdf5 = { version = "0.8.1", optional = true }
hdf5-sys = { version = "0.8.1", optional = true }
netcdf = { version = "0.8.1", optional = true }
netcdf-sys = { version = "0.5.1", optional = true }
tzf-rs = { version = "0.4.9", default-features = false }



[lib]
name = "risico"
path = "src/lib/mod.rs"

[[bin]]
name = "risico-2023"
path = "src/bin/main.rs"
# required-features = ["build-binary"]

# [[bin]]
# name = "risico-2023-config-converter"
# path = "src/bin/converter.rs"
# required-features = ["build-binary"]


# [[bin]]
# name = "test-config"
# path = "src/bin/test-config.rs"
# required-features = ["build-binary"]
